GETools changelog

Backlog:
- not completed | [RIGGING] added Aim Constraint logic
- [RIGGING] added constraint offset object
- [RIGGING] added Rebake IK from selected objects

v1.0.3
- Absolute import replaced by relative import.

v1.0.2
- Fixed the "Set Infinity" function causing a warning message to appear in the console.

v1.0.1
- [HOTFIX] Removed cross dependency for Maya 2020.

v1.0.0
- [UI] Changed main icon and added some small icons.
- [UI] Added pop-up for shelf buttons installation.
- [UI] Decreased buttons size and renamed some labels.
- [TOOLS] Fixed bug in Locator detection logic.
- [TOOLS] Added locators size controller.
- [TOOLS] Added World baking tool.
- [TOOLS] Added offset animation tool.
- [TOOLS] Added rotation mode for Locator Aim Switch.
- [TOOLS] Updated DeleteKeys functions.
- [TOOLS] Updated "Bake By Last" button. New name "By Last" + 2 alternative buttons for Position and Rotation.
- [TOOLS] Removed Tools/Animation/Key Range button. Replaced by "Delete Animation" button.
- [OVERLAPPY] Added pos/rot layer prefixes.
- [UTILS] Added color printing in Colors Palette.
- Improved various modules and overall quality.

v0.0.12
- [UI] Decreased window size and renamed some labels.
- [UI] Moved some rarely used buttons to right-click menus (cursor changes while hovering over buttons with pop-up lists).
- [UTILS] Added Printing selected attributes from channel box to Utils.
- [TOOLS] Added buttons for setting the bake sample rate value.
- [TOOLS] Added baking for selected attributes in the channel box.
- [TOOLS] Separated Locator Bake into "PIN," "Pin POS," and "Pin ROT."
- [TOOLS] Changed Locators Relative to Relative; added a right-click menu for options.
- [RIGGING] Added "Disconnect Targets from Constraint."
- [RIGGING] Improved logic for "Delete Constraints."
- [CENTER OF MASS] Added "Disconnect from Center of Mass" button.
- Improved various modules and overall quality.

v0.0.11