@@ -31,14 +31,52 @@ overlappy = root + "\icons\Overlappy.png"
 
 # Maya's
 empty = "empty.png"
+arrowDown = "arrowDown.png"
+arrowLeft = "arrowLeft.png"
+arrowRight = "arrowRight.png"
+arrowUp = "arrowUp.png"
 bookmark = "Bookmark.png"
-help = "help.png"
+color = "colorPresetSpectrum.png"
+confirm = "confirm.png"
+constraint = "out_normalConstraint.png"
+copy = "skinWeightCopy.png"
+cursor = "aselect.png"
+delete = "delete.png"
 error = "error.png"
-warning = "warningIcon.svg"
-visible = "visible.png"
-light = "Light.png"
-playblast = "playblast.png"
-wait = "waitBusy.png"
-list = "list.svg"
+expandLeft = "leftExpand.png"
+expandRight = "rightExpand.png"
+fileOpen = "fileOpen.png"
+fileSave = "fileSave.png"
+filter = "filter.png"
+help = "help.png"
+helpLine = "help_line.png"
+home = "home.png"
+itemDown = "item_down.png"
+itemUp = "item_up.png"
+joint = "kinJoint.png"
 layer = "layerEditor.png"
+light = "Light.png"
+list = "list.svg"
+locator = "locator.png"
+lock = "lock.png"
+lockOff = "Lock_OFF.png"
+lockOn = "Lock_ON.png"
+nucleus = "nucleus.svg"
+off = "hyper_s_OFF.png"
+on = "hyper_s_ON.png"
+particle = "particle.svg"
+pin = "pinItem.png"
+pinInvert = "invertUVpinning.png"
+playblast = "playblast.png"
+plus = "addClip.png"
+reset = "menuIconReset.png"
+rotateCClockwise = "counterclockwise.png"
+rotateClockwise = "clockwise.png"
+settings = "advancedSettings.png"
+text = "polyType.png"
+visibleOff = "hidden.png"
+visibleOn = "visible.png"
+wait = "waitBusy.png"
+warning = "warningIcon.svg"
+world = "volumeSphere.png"
 zoom = "zoom.png"
